# libaby

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  biome.json  components.json  docker-compose.yml  drizzle.config.ts  index.html  next.config.ts  package.json  release.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: decompress.ts  downloadAll.ts  indexBooks.ts  setup.ts  sync-icons.ts  sync-version.mjs  test.ts  upgrade-tauri.sh
scripts/prompts/: transliteration.txt  verifyTransliterations.txt
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  lib.rs  main.rs
src/actions/: authors.ts  book-download.ts  books.ts  config.test.ts  config.ts  search.ts  shamela.ts
src/app/: layout.tsx  page.tsx
src/app/search/: page.tsx
src/app/shamela/: page.tsx
src/components/: app-sidebar.tsx  application-shell1.tsx  books-table.tsx  footer.tsx  page-header.tsx  page-layout.tsx  paginated-books-table.tsx
src/db/: index.ts  schema.ts
src/lib/: apiKeyManager.ts  book-resource-store.ts  book-resource.ts  book-translation.ts  common.ts  huggingface.ts  io.ts  network.ts  serialization.ts  shamela-content.tsx  shamela-tree.ts  textUtils.ts
src/pages/: BookDetailPage.tsx  BookPageView.tsx  BookPagesPage.tsx  DashboardPage.tsx  SettingsPage.tsx  ShamelaPage.tsx
src/stores/: useBookContentStore.ts  useBookPagesStore.ts  useBooksStore.ts  useLibraryStore.ts  useSettingsStore.ts
src/types/: books.ts
tests/: book-resource.test.ts  shamela-tree.test.ts
(+38 files in other folders)
