[package]
name = "libaby"
version = "0.1.0"
description = "Libaby - Islamic manuscript and text tools"
authors = ["Ragaeeb Haq"]
homepage = "https://github.com/ragaeeb/libaby"
repository = "https://github.com/ragaeeb/libaby"
license = "MIT"
edition = "2021"

[lib]
name = "libaby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
brotli = "7"


